# pytorch-

./: .gitignore  demo_hydra.py  first  model-fold-0.pth  model-fold-1.pth  model-fold-2.pth  model-fold-3.pth  model-fold-4.pth  pl_binary_1dcnn.py  pl_kfold.py  pl_mnist_cnn.py  pl_mnist_dnn_aikui.py  pl_mnist_nn_ai.py  pl_mnist_rnn.py  pl_ts_lstm.py  pl_wandb.py  pyproject.toml  pytorch_lightning_mnist.py  pytorch_lightning_ts.ipynb  pytorch_lightning_ts.py  pytorch_pso.py  pytorch_seq2seq.ipynb  pytorch_seq2seq.py  train.py
config/: pl_mnist_nn_ai.yaml
linear/0/: metrics.csv
models/: networks.py
pytorch_fun-main/: .gitignore  readme.md
pytorch_fun-main/timeseries_transformer/: runner.bat
pytorch_kaggle/: pl-kfold.ipynb
pytorch課程_pl入門到精通/: 0.py  Readme.md
pytorch課程_劉二/: 11_cnn_advance.py  12_rnn.py  13_rnn_advance.py
pytorch課程_劉二/models/: densenet.py
pytorch課程_土推/: cifar10.yaml  pl_cifar10_cnn.py
pytorch課程_土推/models/: model1.py
pytorch課程_網上專案/: data.py  台積電 (2330.TW) 過往股價及數據 - Yahoo 財經.html
pytorch課程_網上專案/台積電 (2330.TW) 過往股價及數據 - Yahoo 財經_files/: app.6512278a.css  atomic-light.ad39d0a8.css  benji-1.0.143.js  bidexchange.js  common.284f75c2bb9e431c43a6.modern.js  desktop_1.11.165.modern.js  f.txt  finSearch_zh-Hant-HK.modern.js  gtm.js  gtm_ns.html  main.b2a52449c302ab695411.modern.js  opus.js  streamer.7f9dd610ea76eb6f4310.mjs  vendor.97f17de0a25fc08c7796.modern.js  wf-caas-1.35.4-modern.js  wf-core-1.65.0-modern.js  wf-loader-2.6.219-modern.js  wf-rapid-1.10.8-modern.js  wf-sticky-1.2.5-modern.js
rnn/0/: hparams.yaml  metrics.csv
(+12 files in other folders)
